--- a/blog/posts/links-6-27-2023.md
+++ b/blog/posts/links-6-27-2023.md
@@ -1,7 +1,7 @@
 # Tuesday Links
 #### June 27, 2023 at 3:00 PM
 
-1. [Ozempic is just the beginning](https://twitter.com/ArmstrongDrew/status/1673442917854113792). Plus, [downstream effects](https://twitter.com/ModeledBehavior/status/1673478338210414592) of a widespread reduction in eating? 
+1. [Ozempic is just the beginning](https://twitter.com/ArmstrongDrew/status/1673442917854113792), plus, [downstream effects](https://twitter.com/ModeledBehavior/status/1673478338210414592) of society-scale reduction in food consumption? 
 2. ['Measureable EA' vs. longtermism](https://twitter.com/JeremiahDJohns/status/1673491284848177153)
 3. [The Truth About China's Social Credit System](https://www.youtube.com/watch?v=Kqov6F00KMc&ab_channel=PolyMatter)
 4. [Nathan Hubbard thoughts on PGA / LIV](https://twitter.com/NathanCHubbard/status/1673529602319450119)
