New post, minor updates to old ones

--- a/blog/posts/links-6-29-2023.md
+++ b/blog/posts/links-6-29-2023.md
@@ -2,7 +2,7 @@
 #### June 29, 2023 at 8:30 PM
 
 1. [Tyler Cowen on Nature on AGI Risk](https://marginalrevolution.com/marginalrevolution/2023/06/nature-on-agi-risk.html)
-2. [Dr. Mike Pound explains the ingenious Power LED Attack](https://www.youtube.com/watch?v=vXe8pe18MNk&ab_channel=Computerphile)
+2. [Computerphile explains the ingenious Power LED Attack](https://www.youtube.com/watch?v=vXe8pe18MNk&ab_channel=Computerphile)
 3. [Car seat laws may reduce births](https://twitter.com/emollick/status/1674195345964769281)
 4. [EVs convert energy to motion dramatically more efficiently than gas engines](https://open.substack.com/pub/hannahritchie/p/inefficiency-ice?r=4ir7u&utm_campaign=post&utm_medium=web)
 5. [Black-White employment gap has closed for the first time on record](https://substack.com/inbox/post/129551748) (subscriber-only post but the relevant section is before the cutoff)
